--- a/src/main/java/view/ChiTietSPView.form
+++ b/src/main/java/view/ChiTietSPView.form
@@ -436,35 +436,38 @@
         <Component class="javax.swing.JButton" name="btn_add">
           <Properties>
             <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-              <Image iconType="2" name="E:\DuAn1\ProjectDuAn1\src\main\java\img\add.png"/>
+              <Image iconType="2" name="C:\Users\admin\Downloads\img\add.png"/>
             </Property>
           </Properties>
+          <Events>
+            <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="btn_addMouseClicked"/>
+          </Events>
         </Component>
         <Component class="javax.swing.JButton" name="btn_sua">
           <Properties>
             <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-              <Image iconType="2" name="E:\DuAn1\ProjectDuAn1\src\main\java\img\update.png"/>
+              <Image iconType="2" name="C:\Users\admin\Downloads\img\update.png"/>
             </Property>
           </Properties>
         </Component>
         <Component class="javax.swing.JButton" name="btn_xoa">
           <Properties>
             <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-              <Image iconType="2" name="E:\DuAn1\ProjectDuAn1\src\main\java\img\delete.png"/>
+              <Image iconType="2" name="C:\Users\admin\Downloads\img\delete.png"/>
             </Property>
           </Properties>
         </Component>
         <Component class="javax.swing.JButton" name="btn_search">
           <Properties>
             <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-              <Image iconType="2" name="E:\DuAn1\ProjectDuAn1\src\main\java\img\search.png"/>
+              <Image iconType="2" name="C:\Users\admin\Downloads\img\search.png"/>
             </Property>
           </Properties>
         </Component>
         <Component class="javax.swing.JButton" name="btn_clear">
           <Properties>
             <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-              <Image iconType="2" name="E:\DuAn1\ProjectDuAn1\src\main\java\img\clear.png"/>
+              <Image iconType="2" name="C:\Users\admin\Downloads\img\clear.png"/>
             </Property>
           </Properties>
         </Component>
