--- a/src/main/java/view/CoSoView.form
+++ b/src/main/java/view/CoSoView.form
@@ -280,7 +280,7 @@
         <Component class="javax.swing.JButton" name="btn_them">
           <Properties>
             <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-              <Image iconType="2" name="E:\DuAn1\ProjectDuAn1\src\main\java\img\add.png"/>
+              <Image iconType="2" name="C:\Users\admin\Downloads\img\add.png"/>
             </Property>
           </Properties>
           <Events>
@@ -290,7 +290,7 @@
         <Component class="javax.swing.JButton" name="btn_sua">
           <Properties>
             <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-              <Image iconType="2" name="E:\DuAn1\ProjectDuAn1\src\main\java\img\update.png"/>
+              <Image iconType="2" name="C:\Users\admin\Downloads\img\update.png"/>
             </Property>
           </Properties>
           <Events>
@@ -300,7 +300,7 @@
         <Component class="javax.swing.JButton" name="btn_xoa">
           <Properties>
             <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-              <Image iconType="2" name="E:\DuAn1\ProjectDuAn1\src\main\java\img\delete.png"/>
+              <Image iconType="2" name="C:\Users\admin\Downloads\img\delete.png"/>
             </Property>
           </Properties>
           <Events>
@@ -310,7 +310,7 @@
         <Component class="javax.swing.JButton" name="btn_clear">
           <Properties>
             <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-              <Image iconType="2" name="E:\DuAn1\ProjectDuAn1\src\main\java\img\clear.png"/>
+              <Image iconType="2" name="C:\Users\admin\Downloads\img\clear.png"/>
             </Property>
           </Properties>
           <Events>
