--- a/src/main/java/view/MauSacView.form
+++ b/src/main/java/view/MauSacView.form
@@ -301,7 +301,7 @@
         <Component class="javax.swing.JButton" name="btn_them">
           <Properties>
             <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-              <Image iconType="2" name="E:\DuAn1\ProjectDuAn1\src\main\java\img\add.png"/>
+              <Image iconType="2" name="C:\Users\admin\Downloads\img\add.png"/>
             </Property>
           </Properties>
           <Events>
@@ -311,7 +311,7 @@
         <Component class="javax.swing.JButton" name="btn_sua">
           <Properties>
             <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-              <Image iconType="2" name="E:\DuAn1\ProjectDuAn1\src\main\java\img\update.png"/>
+              <Image iconType="2" name="C:\Users\admin\Downloads\img\update.png"/>
             </Property>
           </Properties>
           <Events>
@@ -321,7 +321,7 @@
         <Component class="javax.swing.JButton" name="btn_xoa">
           <Properties>
             <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-              <Image iconType="2" name="E:\DuAn1\ProjectDuAn1\src\main\java\img\delete.png"/>
+              <Image iconType="2" name="C:\Users\admin\Downloads\img\delete.png"/>
             </Property>
           </Properties>
           <Events>
@@ -331,7 +331,7 @@
         <Component class="javax.swing.JButton" name="btn_clear">
           <Properties>
             <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-              <Image iconType="2" name="E:\DuAn1\ProjectDuAn1\src\main\java\img\clear.png"/>
+              <Image iconType="2" name="C:\Users\admin\Downloads\img\clear.png"/>
             </Property>
           </Properties>
           <Events>
